# Flowcast

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
deploy/: flowcast.duckdb
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: clusters.json  correlations.json  models.json  overview.json  sites.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: DailyVolumeChart.tsx  ForecastChart.tsx  HourlyProfileChart.tsx  Layout.css  Layout.tsx  SiteMap.css  SiteMap.tsx  SitePanel.css  SitePanel.tsx
frontend/src/pages/: ClustersPage.css  ClustersPage.tsx  CorrelationsPage.css  CorrelationsPage.tsx  DashboardPage.css  DashboardPage.tsx  MapPage.css  MapPage.tsx  ModelsPage.css  ModelsPage.tsx
scripts/: export_deploy_db.py  export_static.py  geocode.py  ingest.py  model.py  serve.py  validate.py
src/flowcast/: config.py
src/flowcast/api/: __init__.py  app.py  deps.py  schemas.py
src/flowcast/db/: connection.py  schema.py
src/flowcast/geocoding/: __init__.py  load_coords.py
src/flowcast/ingestion/: discover.py  extract.py  load.py  pipeline.py  quality.py
src/flowcast/modelling/: __init__.py  clusters.py  evaluate.py  features.py  forecast.py  holidays_au.py  od_inference.py  site_selection.py  train.py
tests/: conftest.py  test_api.py  test_clusters.py  test_discover.py  test_extract.py  test_features.py  test_forecast.py  test_load.py  test_normalize.py  test_pipeline.py  test_train.py
(+8933 files in other folders)
