[project]
name = "flowcast"
version = "0.1.0"
description = "Melbourne Traffic Intelligence & Forecasting Platform"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]
model = [
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "holidays>=0.40",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "optuna>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
